--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Crime</title>
 </head>
 <body>
-<div class="caixa-principal"></div>
-    <h1>Crime</h1>
-    <div class="caixa-perguntas"></div>
-    <div class="caixa-alternativas"></div>
-    <div class="caixa-resultado"></div>
-        <p class="texto-resultado"></p>
+    <div class="caixa-principal">
+        <h1>Crime</h1>
+        <div class="caixa-perguntas"></div>
+        <div class="caixa-alternativas"></div>
+        <div class="caixa-resultado">
+            <p class="texto-resultado"></p>
         </div>
     </div>
     <script src="script.js"></script>
